<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_pantalla"
    android:weightSum="1"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context="juegoter.example.michaelvargas.juegoter.MainActivity">

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.4"
        android:id="@+id/space" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal">
        <TextView
            style="@style/titulo"
            android:text="@string/app_name"/>

        <Button
            android:id="@+id/unjug"
            android:text="@string/un_jugador"
            style="@style/boton" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/configD">
            <RadioButton
                android:id="@+id/facil"
                android:text="@string/facil"
                style="@style/radio"/>
            <RadioButton
                android:id="@+id/normal"
                android:text="@string/normal"
                style="@style/radio"
                android:checked="true" />
            <RadioButton
                android:id="@+id/imposible"
                android:text="@string/Imposible"
                style="@style/radio"/>
        </RadioGroup>
        <Button
            android:id="@+id/dosjugadores"
            android:text="@string/dos_jugador"
            style="@style/botonDos"/>
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.4"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:columnCount="3"
        android:rowCount="3"
        android:layout_toEndOf="@+id/space"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/linearLayout">
        <ImageView
            android:id="@+id/a1"
            style="@style/casilla" />
        <ImageView
            android:id="@+id/a2"
            style="@style/casilla" />
        <ImageView
            android:id="@+id/a3"
            android:src="@drawable/aspa"
            style="@style/casilla" />
        <ImageView
            android:id="@+id/b1"
            style="@style/casilla" />
        <ImageView
            android:id="@+id/b2"
            android:src="@drawable/circulo"
            style="@style/casilla" />
        <ImageView
            android:id="@+id/b3"
            style="@style/casilla" />
        <ImageView
            android:id="@+id/c1"
            android:src="@drawable/circulo"
            style="@style/casilla" />
        <ImageView
            android:id="@+id/c2"
            android:src="@drawable/aspa"
            style="@style/casilla" />
        <ImageView
            android:id="@+id/c3"
            android:src="@drawable/aspa"
            style="@style/casilla" />
    </GridLayout>
</RelativeLayout>
